fixed flickering of icons when viewport is very small

--- a/front-end/src/Components/BackgroundCategories/BackgroundCategories.css
+++ b/front-end/src/Components/BackgroundCategories/BackgroundCategories.css
@@ -36,3 +36,7 @@
     position: fixed;
     pointer-events: none;
   }
+
+  .lf-player-container div svg {
+    transform: none!important;
+  }
